Add logging to help understand bookmark apps icon bug.

This bug is hard to reproduce on local builds. Adding logging to help
get insight into the bug happening in the wild.

Bug: 629726
Change-Id: I53da4035fd5800aa10cbd777dde9e66467b201a3
Reviewed-on: https://chromium-review.googlesource.com/607742
Reviewed-by: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Commit-Queue: Ben Wells <benwells@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493311}
Former-commit-id: fe639a3d71066331d8a20bfb3505ec500e78c2ac