chrome/browser/extensions/extension_sync_service.cc
@@ -312,6 +312,10 @@ ExtensionSyncData ExtensionSyncService::CreateSyncData(
     if (it->second.grant_permissions_and_reenable)
       result.set_enabled(true);
   }
+  if (extension.from_bookmark()) {
+    VLOG(1) << "Created bookmark app sync data";
+    VLOG(1) << result.GetSyncData().ToString();
+  }
   return result;
 }
 
@@ -545,6 +549,8 @@ void ExtensionSyncService::ApplySyncData(
 
 void ExtensionSyncService::ApplyBookmarkAppSyncData(
     const ExtensionSyncData& extension_sync_data) {
+  VLOG(1) << "Applying bookmark app sync data";
+  VLOG(1) << extension_sync_data.GetSyncData().ToString();
   DCHECK(extension_sync_data.is_app());
 
   // Process bookmark app sync if necessary.
@@ -582,12 +588,16 @@ void ExtensionSyncService::ApplyBookmarkAppSyncData(
     icon_info.width = icon.size;
     icon_info.height = icon.size;
     web_app_info.icons.push_back(icon_info);
+    VLOG(1) << "Adding linked icon of size " << icon.size << ": "
+            << icon.url.spec();
   }
 
   // If the bookmark app already exists, keep the old icons.
   if (!extension) {
+    VLOG(1) << "Extension did not exist; calling create or update";
     CreateOrUpdateBookmarkApp(extension_service(), &web_app_info);
   } else {
+    VLOG(1) << "Extension already existed, updating it";
     GetWebApplicationInfoFromApp(profile_,
                                  extension,
                                  base::Bind(&OnWebApplicationInfoLoaded,
